# line-span

./: CHANGELOG.md  Cargo.toml  README.md  bench-lines.rs
.github/workflows/: ci.yml
src/: lib.rs
tests/: regression.rs
