[package]
name = "line-span"
version = "0.1.0"
authors = ["Christian Vallentin"]
edition = "2018"
description = "Find line ranges and jump between next and previous lines"
keywords = ["text", "streaming", "line", "line-number", "line-num"]
categories = ["algorithms", "text-processing"]
license = "MIT"
repository = "https://github.com/vallentin/line-span"
homepage = "https://github.com/vallentin/line-span"
documentation = "https://docs.rs/line-span"
readme = "README.md"
exclude = [".travis.yml"]

[badges]
travis-ci = { repository = "vallentin/line-span" }

[dependencies]
